Update Admin Webpage

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="nav">
       <div id="nav_left">
         <img class="loge" src="img/team_fish.png" alt="">
-        <b>Team Fish</b>
-        <!-- <b>Restore MySpirit</b> -->
+        <!-- <b>Team Fish</b> -->
+        <b>Restore MySpirit</b>
       </div>
       <div id="nav_right">
         <ul>
@@ -25,7 +25,7 @@
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
 
-          <img id="user" src="img/team_fish.png" alt="user" onclick="toLog()">
+          <img id="user" src="img/login.png" alt="user" onclick="toLog()">
         </ul>
         
       </div>
