--- a/pages/Log.html
+++ b/pages/Log.html
@@ -15,8 +15,8 @@
     <div id="nav">
       <div id="nav_left">
         <img class="loge" src="../img/team_fish.png" alt="">
-        <b>Team Fish</b>
-        <!-- <b>Restore MySpirit</b> -->
+        <!-- <b>Team Fish</b> -->
+        <b>Restore MySpirit</b>
       </div>
       <div id="nav_right">
         <ul>
@@ -25,7 +25,7 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch">Log in</li>
           <li id="nav_book">Book Now</li>
-          <img class="loge" src="../img/team_fish.png" alt="" onclick="toLog()">
+          <img class="loge" src="../img/login.png" alt="" onclick="toLog()">
         </ul>
         
       </div>
@@ -39,6 +39,7 @@
         <input type="text" placeholder="User Name" id="login_email">
         <input type="password" placeholder="Password" id="login_pass">
         <button onclick="sub_login()">Log in</button>
+        <p>Admin:<br>name:admin password:admin</p>
       </div>
       <div id="hr_box"></div>
       <div id="signup_box">
