--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -16,8 +16,8 @@
     <div id="nav">
       <div id="nav_left">
         <img class="loge" src="../img/team_fish.png" alt="">
-        <b>Team Fish</b>
-        <!-- <b>Restore MySpirit</b> -->
+        <!-- <b>Team Fish</b> -->
+        <b>Restore MySpirit</b>
       </div>
       <div id="nav_right">
         <ul>
@@ -26,7 +26,7 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <img class="loge" src="../img/team_fish.png" alt="" onclick="toLog()">
+          <img class="loge" src="../img/login.png" alt="" onclick="toLog()">
         </ul>
       </div>
     </div>
