--- a/pages/admin_questions.html
+++ b/pages/admin_questions.html
@@ -59,7 +59,7 @@
     <div id="main_box">
       <div id="addque_view_box">
         <div id="newque_box">
-          <textarea name="" id="" cols="30" rows="3" placeholder="Start new post..."></textarea>
+          <textarea name="" id="" cols="30" rows="3" placeholder="Add question to FAQ..."></textarea>
           <button>Post</button>
         </div>
         <h2>Current FAQ Featured on Website</h2>
