Delete log in hint

--- a/pages/Log.html
+++ b/pages/Log.html
@@ -39,7 +39,7 @@
         <input type="text" placeholder="User Name" id="login_email">
         <input type="password" placeholder="Password" id="login_pass">
         <button onclick="sub_login()">Log in</button>
-        <p>Admin:<br>name:admin password:admin</p>
+<!--         <p>Admin:<br>name:admin password:admin</p> -->
       </div>
       <div id="hr_box"></div>
       <div id="signup_box">
