--- a/pages/Log.html
+++ b/pages/Log.html
@@ -24,7 +24,7 @@
           <li id="FAQ_link" onclick="toFAQ()">FAQ</li>
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch">Log in</li>
-          <li id="nav_book">Book Now</li>
+          <li id="nav_book" onclick="toBook()">Book Now</li>
           <img class="loge" src="../img/login.png" alt="" onclick="toLog()">
         </ul>
         
