Update login verification, account page, FAQ management page
Update login verification, user account page and admin FAQ management page

--- a/pages/admin_FAQ.html
+++ b/pages/admin_FAQ.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin FAQ</title>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/admin_FAQ.css">
 </head>
@@ -15,19 +16,19 @@
     <h3>Experience our healing and spiritual services today...</h3>
     <div id="nav">
       <div id="nav_left">
-        <img class="loge" src="../img/team_fish.png" alt="">
+        <img class="loge" src="../img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
         <b>Restore MySpirit</b>
       </div>
       <div id="nav_right">
         <ul>
-          <li id="home_link">Home</li>
+          <li id="home_link" onclick="toHome()">Home</li>
           <li id="FAQ_link" onclick="toFAQ()">FAQ</li>
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-
-          <img id="user" src="../img/login.png" alt="user" onclick="toLog()">
+          <li id="user"><img src="../img/login.png" alt="user"></li>
+          <li id="username">Login</li>
         </ul>
 
       </div>
@@ -58,7 +59,12 @@
     </div>
 
     <div id="main_box">
-    
+      <h2>Add FAQ Question</h2>
+      <div id="addFAQ_box">
+        <input type="text" placeholder="New Question...">
+        <textarea name="" id="" cols="30" rows="8" placeholder="Answer..."></textarea>
+        <button>ADD</button>
+      </div>
     </div>
   </main>
   <script type="text/javascript" src="../js/index.js"></script>
