--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>Experience our healing and spiritual services today...</h3>
     <div id="nav">
       <div id="nav_left">
-        <img class="loge" src="img/team_fish.png" alt="">
+        <img class="loge" src="img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
         <b>Restore MySpirit</b>
       </div>
@@ -24,8 +24,8 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-
-          <img id="user" src="img/login.png" alt="user" onclick="toLog()">
+          <li id="user" onclick="toLog()"><img src="../img/login.png" alt="user"></li>
+          <!-- <li id="username" onclick="toLog()">Login</li> -->
         </ul>
         
       </div>
@@ -82,11 +82,10 @@
       <h2>Restore</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
-    <div>
+    <div id="footer_icon">
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li><img src="img/Facebook.png" alt=""></li>
+        <li><img src="img/instagram.png" alt=""></li>
       </ul>
     </div>
     
