--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -15,7 +15,7 @@
     <h3>Experience our healing and spiritual services today...</h3>
     <div id="nav">
       <div id="nav_left">
-        <img class="loge" src="../img/team_fish.png" alt="">
+        <img class="loge" src="../img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
         <b>Restore MySpirit</b>
       </div>
@@ -26,7 +26,8 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <img class="loge" src="../img/login.png" alt="" onclick="toLog()">
+          <li id="user" onclick="toLog()"><img src="../img/login.png" alt="user"></li>
+          <li id="username" onclick="toLog()">Login</li>
         </ul>
       </div>
     </div>
@@ -123,9 +124,7 @@
       <form action="">
         <input type="text" name="name" placeholder="NAME">
         <input type="email" name="emal" placeholder="EMAIL">
-        <textarea name="question" id="" cols="30" rows="10" placeholder="QUESTION">
-
-        </textarea>
+        <textarea name="question" id="" cols="30" rows="10" placeholder="QUESTION"></textarea>
         <!-- <input type="textarea" name="emal" value="QUESTION"> -->
         <input id='sbtn'type="button" value="Contact Us" onclick="sub_que()">
       </form>
@@ -137,11 +136,10 @@
       <h2>Restore</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
-    <div>
+    <div id="footer_icon">
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li><img src="../img/Facebook.png" alt=""></li>
+        <li><img src="../img/instagram.png" alt=""></li>
       </ul>
     </div>
     
