--- a/pages/Log.html
+++ b/pages/Log.html
@@ -14,7 +14,7 @@
     <h3>Experience our healing and spiritual services today...</h3>
     <div id="nav">
       <div id="nav_left">
-        <img class="loge" src="../img/team_fish.png" alt="">
+        <img class="loge" src="../img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
         <b>Restore MySpirit</b>
       </div>
@@ -25,7 +25,8 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <img class="loge" src="../img/login.png" alt="" onclick="toLog()">
+          <li id="user"><img src="../img/login.png" alt="user"></li>
+          <li id="username">Login</li>
         </ul>
         
       </div>
@@ -39,7 +40,7 @@
         <input type="text" placeholder="User Name" id="login_email">
         <input type="password" placeholder="Password" id="login_pass">
         <button onclick="sub_login()">Log in</button>
-<!--         <p>Admin:<br>name:admin password:admin</p> -->
+        <!-- <p>Admin:<br>name:admin password:admin</p> -->
       </div>
       <div id="hr_box"></div>
       <div id="signup_box">
@@ -57,11 +58,10 @@
       <h2>Restore</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
-    <div>
+    <div id="footer_icon">
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li><img src="../img/Facebook.png" alt=""></li>
+        <li><img src="../img/instagram.png" alt=""></li>
       </ul>
     </div>
     
