Update nav user name label

--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -26,8 +26,8 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <li id="user" onclick="toLog()"><img src="../img/login.png" alt="user"></li>
-          <li id="username" onclick="toLog()">Login</li>
+          <li id="user" onclick="toLog()" title="User"><img src="../img/login.png" alt="user"></li>
+          <!-- <li id="username" onclick="toLog()">Login</li> -->
         </ul>
       </div>
     </div>
