--- a/pages/account.html
+++ b/pages/account.html
@@ -25,7 +25,7 @@
           <li id="nav_login_ch">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
           <li id="user"><img src="../img/login.png" alt="user"></li>
-          <li id="username">Login</li>
+          <!-- <li id="username">Login</li> -->
         </ul>
         
       </div>
