--- a/pages/admin_blog.html
+++ b/pages/admin_blog.html
@@ -26,7 +26,7 @@
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
           <li id="user"><img src="../img/login.png" alt="user"></li>
-          <li id="username">Login</li>
+          <!-- <li id="username">Login</li> -->
         </ul>
         
       </div>
