update user title

--- a/pages/admin_FAQ.html
+++ b/pages/admin_FAQ.html
@@ -27,7 +27,7 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <li id="user"><img src="../img/login.png" alt="user"></li>
+          <li id="user" title="Login"><img src="../img/login.png" alt="user"></li>
           <!-- <li id="username">Login</li> -->
         </ul>
 
