--- a/pages/account.html
+++ b/pages/account.html
@@ -24,7 +24,7 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <li id="user"><img src="../img/login.png" alt="user"></li>
+          <li id="user" title="Login"><img src="../img/login.png" alt="user"></li>
           <!-- <li id="username">Login</li> -->
         </ul>
         
