--- a/pages/blog.html
+++ b/pages/blog.html
@@ -24,7 +24,7 @@
           <li id="blog_link">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book" onclick="toBook()">Book Now</li>
-          <li id="user" onclick="toLog()"><img src="../img/login.png" alt="user"></li>
+          <li id="user" onclick="toLog()" title="Login"><img src="../img/login.png" alt="user"></li>
           <!-- <li id="username" onclick="toLog()">Login</li> -->
         </ul>
         
