--- a/pages/book.html
+++ b/pages/book.html
@@ -25,7 +25,7 @@
           <li id="blog_link" onclick="toBlog()">Blog</li>
           <li id="nav_login_ch" onclick="toLog()">Log in</li>
           <li id="nav_book">Book Now</li>
-          <li id="user" onclick="toLog()"><img src="../img/login.png" alt="user"></li>
+          <li id="user" onclick="toLog()" title="Login"><img src="../img/login.png" alt="user"></li>
           <!-- <li id="username" onclick = "toLog()">Login</li> -->
         </ul>
         
