Update Book page and jump, Book admin page, fix invalid button

--- a/pages/account.html
+++ b/pages/account.html
@@ -59,7 +59,7 @@
           </div>
         </div>
 
-        <div class="book_item">
+        <div class="book_item" id="bitem2">
           <div class="book_info">
             <p><b>Traditional Japanese Reiki Healing Service</b></p>
             <p><b>Date:</b> 23rd January 2023</p>
@@ -70,13 +70,13 @@
             Australia</p>
           </div>
           <div class="book_option">
-            <p>17/04/2023</p>
-            <p>$159</p>
-            <button>Delete</button>
+            <p>19/04/2023</p>
+            <p>$139</p>
+            <button onclick="userDelBook2()">Delete</button>
           </div>
         </div>
 
-        <div class="book_item">
+        <div class="book_item" id="bitem3">
           <div class="book_info">
             <p><b>Traditional Japanese Reiki Healing Service</b></p>
             <p><b>Date:</b> 23rd January 2023</p>
@@ -87,9 +87,9 @@
             Australia</p>
           </div>
           <div class="book_option">
-            <p>17/04/2023</p>
-            <p>$159</p>
-            <button>Delete</button>
+            <p>20/04/2023</p>
+            <p>$111</p>
+            <button onclick="userDelBook3()">Delete</button>
           </div>
         </div>
       </div>
