--- a/pages/admin_blog.html
+++ b/pages/admin_blog.html
@@ -59,18 +59,18 @@
      <div id="main_box">
         <div id="post_view_box">
           <div id="newpost_box">
-            <textarea name="" id="" cols="30" rows="3" placeholder="Start new post..."></textarea>
-            <button>Post</button>
+            <textarea name="" id="adminpost" cols="30" rows="3" placeholder="Start new post..."></textarea>
+            <button onclick="postBlog()">Post</button>
           </div>
           <h2>Previous posts on your blog</h2>
           <div class="posted_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. </p>
-            <button>Edit</button>
+            <p id="blogInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. </p>
+            <button onclick="editBlog()">Edit</button>
           </div>
 
           <div class="posted_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. </p>
-            <button>Edit</button>
+            <p id="blogInfo2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. </p>
+            <button onclick="editBlog2()">Edit</button>
           </div>
         </div>
 
