--- a/pages/admin_FAQ.html
+++ b/pages/admin_FAQ.html
@@ -61,9 +61,9 @@
     <div id="main_box">
       <h2>Add FAQ Question</h2>
       <div id="addFAQ_box">
-        <input type="text" placeholder="New Question...">
-        <textarea name="" id="" cols="30" rows="8" placeholder="Answer..."></textarea>
-        <button>ADD</button>
+        <input type="text" id="FAQtit" placeholder="New Question...">
+        <textarea name="" id="FAQans" cols="30" rows="8" placeholder="Answer..."></textarea>
+        <button onclick="addFAQ()">ADD</button>
       </div>
     </div>
   </main>
