--- a/pages/admin_book.html
+++ b/pages/admin_book.html
@@ -58,15 +58,48 @@
 
     <div id = "main_box">
       <h1>Upcoming Appointments</h1>
-      <div class="ad_bookings">
-        <img src="../img/user.png" alt="">
-        <div>
-          <h2>JARROD WEIGHTMAN</h2>
+      <div class="ad_bookings" id="adb1">
+        <div class="ad_btop_box">
           <p>Service: Traditional Reiki Healing Appointment</p>
           <p>Date: 9th of July</p>
           <p>Time: 1:00PM - 2:00PM</p>
-          <button>Edit</button>
         </div>
+
+        <div class="ad_bbut_box"> 
+          <img src="../img/user.png" alt="">
+          <span>JARROD WEIGHTMAN</span>
+          <button onclick="cancelBook()">Cancel Booking</button>
+        </div>
+      </div>
+
+      <div class="ad_bookings" id="adb2">
+        <div class="ad_btop_box">
+          <p>Service: Clairvoyance</p>
+          <p>Date: 9th of July</p>
+          <p>Time: 1:00PM - 2:00PM</p>
+        </div>
+
+        <div class="ad_bbut_box"> 
+          <img src="../img/user.png" alt="">
+          <span>JARROD</span>
+          <button onclick="cancelBook2()">Cancel Booking</button>
+        </div>
+      </div>
+
+      <div class="ad_bookings" id="adb3">
+        <div class="ad_btop_box">
+          <p>Service: Traditional Reiki Healing Appointment</p>
+          <p>Date: 9th of July</p>
+          <p>Time: 1:00PM - 2:00PM</p>
+        </div>
+
+        <div class="ad_bbut_box"> 
+          <img src="../img/user.png" alt="">
+          <span>WEIGHTMAN</span>
+          <button onclick="cancelBook3()">Cancel Booking</button>
+        </div>
+
+        
       </div>
     </div>
   </main>
