--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div id="nav_left">
         <img class="loge" src="img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
-        <b>Restore MySpirit</b>
+<!--         <b>Restore MySpirit</b> -->
+        <b>Team Coffee Fish</b>
       </div>
       <div id="nav_right">
         <ul>
