Update font and layuot

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -15,8 +19,7 @@
       <div id="nav_left">
         <img class="loge" src="img/ball.png" alt="">
         <!-- <b>Team Fish</b> -->
-<!--         <b>Restore MySpirit</b> -->
-        <b>Team Coffee Fish</b>
+        <b>Restore MySpirit</b>
       </div>
       <div id="nav_right">
         <ul>
@@ -35,7 +38,7 @@
 
   <main>
     <div id="main_img">
-      <img src="img/ps_home_background.jpg" alt="">
+      <img src="img/ed_home_background.jpg" alt="">
       <!-- <span>Restore your spirit <br> today with our <br> healing and <br> spiritual services</span> -->
     </div>
     
@@ -46,10 +49,11 @@
         <div class="ser_item">
           <div>
             <img src="img/os1.png" alt="">
-            <p>Clairvoyance and Psychic Medium</p>
           </div>
           <div class="ser_info">
-            <p>Our clairvoyance and psychic medium services do this that and the other. This is example text that I am writing on the spot to fill space, to pretend we have a large description of this service</p>
+            <b>Clairvoyance and Psychic Medium</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. Ut dictum tortor a massa tincidunt, eu pellentesque diam accumsan. Quisque arcu arcu, feugiat quis vehicula vel, elementum et odio. Pellentesque tincidunt egestas dignissim. Sed in ex lacinia, venenatis ligula quis, finibus justo.
+            </p>
           </div>
         </div>
 
@@ -57,10 +61,12 @@
 
         <div class="ser_item">
           <div class="ser_info">
-            <p>Our clairvoyance and psychic medium services do this that and the other. This is example text that I am writing on the spot to fill space, to pretend we have a large description of this service</p>
+            <b>Traditional Japanese Reiki Healing</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. Ut dictum tortor a massa tincidunt, eu pellentesque diam accumsan. Quisque arcu arcu, feugiat quis vehicula vel, elementum et odio. Pellentesque tincidunt egestas dignissim. Sed in ex lacinia, venenatis ligula quis, finibus justo.
+            </p>
           </div>
           <div>
-            <p>Traditional Japanese Reiki Healing</p>
+            
             <img src="img/os2.png" alt="">
           </div>
         </div>
@@ -80,7 +86,7 @@
 
   <footer>
     <div id="info_box">
-      <h2>Restore</h2>
+      <h2>Restore MySpirit</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
     <div id="footer_icon">
