--- a/pages/book.html
+++ b/pages/book.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/book.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -34,7 +38,7 @@
   </header>
 
   <main>
-    <h1>Book your appointment</h1>
+    <h1>Book An Appointment</h1>
 
     <div id="book_box">
       <div id="date_box">
