--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/FAQ.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
+
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
 </head>
 <body>
@@ -34,7 +39,7 @@
   </header>
 
   <main>
-    <h1>Frequently Asked Questions</h1>
+    <h1>FAQs</h1>
 
     <div id="FAQ_box">
       <!-- <div class="FAQ_item">
@@ -65,7 +70,9 @@
       
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-              What is Clairvoyance?
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. Ut dictum tortor a massa tincidunt, eu pellentesque diam accumsan. Quisque arcu arcu, feugiat quis vehicula vel, elementum et odio. Pellentesque tincidunt egestas dignissim. Sed in ex lacinia, venenatis ligula quis, finibus justo.
+
+
             </div>
           </div>
         </div>
@@ -95,7 +102,9 @@
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body">
-              How do I make a booking?
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. Ut dictum tortor a massa tincidunt, eu pellentesque diam accumsan. Quisque arcu arcu, feugiat quis vehicula vel, elementum et odio. Pellentesque tincidunt egestas dignissim. Sed in ex lacinia, venenatis ligula quis, finibus justo.
+
+
             </div>
           </div>
         </div>
@@ -110,7 +119,9 @@
           </div>
           <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
             <div class="card-body">
-              What should I expect from each service?
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at ipsum leo. Aliquam hendrerit sem non eros elementum egestas. Suspendisse ut iaculis tellus. Sed condimentum egestas quam, eu pulvinar nunc commodo vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer commodo tortor ante, eu sollicitudin magna maximus sed. Ut dictum tortor a massa tincidunt, eu pellentesque diam accumsan. Quisque arcu arcu, feugiat quis vehicula vel, elementum et odio. Pellentesque tincidunt egestas dignissim. Sed in ex lacinia, venenatis ligula quis, finibus justo.
+
+
             </div>
           </div>
         </div>
@@ -119,7 +130,7 @@
     </div>
 
     <div id="contact_box">
-      <h3>Didn’t answer all your questions?</h3>
+      <h3>Didn’t answer all your questions? As us here!</h3>
 
       <form action="">
         <input type="text" name="name" placeholder="NAME">
@@ -133,7 +144,7 @@
 
   <footer>
     <div id="info_box">
-      <h2>Restore</h2>
+      <h2>Restore MySpirit</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
     <div id="footer_icon">
