--- a/pages/Log.html
+++ b/pages/Log.html
@@ -8,6 +8,10 @@
   <!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/log.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -55,7 +59,7 @@
 
   <footer>
     <div id="info_box">
-      <h2>Restore</h2>
+      <h2>Restore MySpiri</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
     <div id="footer_icon">
