--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,6 +7,10 @@
   <title>Blog</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/blog.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -33,7 +37,7 @@
   </header>
 
   <main>
-    <h1>Restore MySpirit - Blog</h1>
+    <h1>Blog</h1>
 
     <div id="blog_box">
       <div class="blog_item">
@@ -60,7 +64,7 @@
 
   <footer>
     <div id="info_box">
-      <h2>Restore</h2>
+      <h2>Restore MySpirit</h2>
       <p>123 Address Road <br> Melbourne 3000 VIC <br> Australia</p>
     </div>
     <div id="footer_icon">
